# TmplAbstrctBaseTest

./: .gitignore  BUILDING.txt  CMakeLists.txt  blue.cpp  blue.h  color_interface.h  green.cpp  green.h  main.c  main.cpp
